# nanodns

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  check_syntax.sh  docker-compose.yml  nanodns.json  nanodns.service
.github/: cliff.toml
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/cache/: mod.rs
src/config/: mod.rs
src/dns/: mod.rs  packet.rs  resolver.rs  wildcard.rs
src/mgmt/: mod.rs
src/server/: mod.rs
src/sync/: mod.rs
tests/: integration_test.rs  network_test.rs
